# MADS-ML-Alex

./: .gitignore  Readme.md  main.py  pyproject.toml
modellogs/u1_128_u2_128_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444842.DESKTOP-F8R8DQE.13392.11
modellogs/u1_128_u2_256_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444849.DESKTOP-F8R8DQE.13392.13
modellogs/u1_128_u2_512_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444855.DESKTOP-F8R8DQE.13392.15
modellogs/u1_128_u2_64_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444836.DESKTOP-F8R8DQE.13392.9
modellogs/u1_256_u2_128_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444868.DESKTOP-F8R8DQE.13392.19
modellogs/u1_256_u2_256_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444874.DESKTOP-F8R8DQE.13392.21
modellogs/u1_256_u2_512_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444880.DESKTOP-F8R8DQE.13392.23
modellogs/u1_256_u2_64_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444861.DESKTOP-F8R8DQE.13392.17
modellogs/u1_512_u2_128_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444893.DESKTOP-F8R8DQE.13392.27
modellogs/u1_512_u2_256_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444899.DESKTOP-F8R8DQE.13392.29
modellogs/u1_512_u2_512_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444906.DESKTOP-F8R8DQE.13392.31
modellogs/u1_512_u2_64_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444887.DESKTOP-F8R8DQE.13392.25
modellogs/u1_64_u2_128_bs_64_ep_3_lr_0p001/: events.out.tfevents.1778444817.DESKTOP-F8R8DQE.13392.3
reports/: hidden_size_results.csv
src/: Create_heatmap.py  run_experiment.py
(+57 files in other folders)
