[project]
name = "mads-ml-alex"
version = "0.1.0"
description = "MADS Machine Learning assignment - Fashion-MNIST hyperparameter tuning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "mads-datasets",
    "mltrainer",
    "tomlserializer",
    "tensorboard",
    "torch-tb-profiler",
    "ipykernel",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "loguru",
    "torchinfo",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true